// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component renders a number input 1`] = `
<div>
  <input
    class="c-dtikvq c-dtikvq-pHZal-size-md c-dtikvq-ikLAKdM-css"
    inputmode="numeric"
    pattern="[0-9]*"
    placeholder="001"
    type="text"
  />
</div>
`;

exports[`Input component renders a text input 1`] = `
<div>
  <input
    class="c-dtikvq c-dtikvq-pHZal-size-md c-dtikvq-ikLAKdM-css"
    placeholder="INPUT"
    type="text"
  />
</div>
`;
